--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
 }
 
 body {
+   font-family: 'Open Sans', sans-serif;
    margin: 0;
    cursor: default;
 }
@@ -50,6 +51,12 @@ a {
 ul {
    list-style: none;
    padding-left: 0;
+}
+
+button {
+   background-color: transparent;
+   cursor: pointer;
+   border: none;
 }
 
 /* Typography */
@@ -85,9 +92,9 @@ p {
 #navbar {
    display: flex;
    justify-content: space-between;
-   background-color: var(--color-pink);
+   background-color: var(--color-git-grey);
    align-items: center;
-   color: var(--color-white);
+   color: var(--color-light-white);
    padding: 16px;
 }
 
@@ -109,9 +116,36 @@ p {
 
 .navbar__menu__item.active {
    border: 1px solid var(--color-white);
-   
 }
 
 .navbar__menu__item:hover {
    background-color: var(--color-dark-pink);
+}
+
+/* Home */
+#home {
+   background: url('images/home-background.png') center/cover no-repeat;
+   padding: 40px;
+   text-align: center;
+}
+
+.home__avatar {
+   width: 250px;
+   height: 270px;
+}
+
+.home__title, 
+.home__description {
+   color: var(--color-white);
+}
+
+.home__contact {
+   color: var(--color-white);
+   font-size: var(--font-regular);
+   font-weight: var(--weight-bold);
+   margin: 24px;
+   padding: 8px 12px;
+   border: 2px solid var(--color-white);
+   border-radius: var(--size-border-radius);
+
 }
