--- a/style.css
+++ b/style.css
@@ -30,7 +30,12 @@
 
 /* Size */
 --size-border-radius: 4px;
+
+/* Animation */
+--animation-duration: 300ms;
 }
+
+
 
 /* Universal tags */
 *{
@@ -124,7 +129,7 @@ p {
 
 /* Home */
 #home {
-   background: url('images/home-background.png') center/cover no-repeat;
+   background: url('images/newHomeBackground.png') center/cover no-repeat;
    padding: 40px;
    text-align: center;
 }
@@ -147,5 +152,70 @@ p {
    padding: 8px 12px;
    border: 2px solid var(--color-white);
    border-radius: var(--size-border-radius);
+}
 
+/* Section common */
+.section {
+   text-align: center;
+   padding: 50px;
+   max-width: 1200px;
+   margin: auto;
+}
+
+/* About */
+.about__majors {
+   display: flex;
+   justify-content: space-between;
+   margin: 80px 0;
+}
+
+.major__icon {
+   width: 170px;
+   height: 170px;
+   line-height: 170px;
+   font-size: 70px;
+   /* background-color: var(--color-orange); */
+   margin: auto;
+   border: 1px solid var(--color-blue);
+   border-radius: 50%;
+   margin-bottom: 16px;
+   color: #0077c8;
+}
+
+.major__icon i {
+   transition: all var(--animation-duration) ease;
+}
+.major__icon:hover i {
+   color: var(--color-orange);
+   transform: rotate(-30deg) scale(1.1);
+}
+.major__title, .major__description {
+   color: var(--color-dark-grey);
+}
+
+.major__description {
+   font-size: var(--font-small);
+}
+
+.job {
+   display: flex;
+   align-items: center;
+}
+
+.job__description {
+   margin: 0 16px;
+   text-align: left;
+}
+
+.job__name,
+.job__period {
+   color: var(--color-light-grey);
+}
+
+.job__name {
+   font-size: var(--font-small);
+}
+
+.job__period {
+   font-size: var(--font-micro);
 }
