--- a/style.css
+++ b/style.css
@@ -242,9 +242,30 @@ margin: 0;
 color: var(--color-white);
 }
 
+.skill__description {
+display: flex;
+justify-content: space-between;
+}
+
+.skill {
+margin-bottom: 16px;
+}
+
+.skill__bar {
+   width: 100%;
+   height: 3px;
+   background-color: var(--color-grey);
+}
+
+.skill__value {
+   height: 3px;
+   background-color: var(--color-orange);
+}
+
 .skillset__left {
 flex-basis: 60%;
 background-color: var(--color-dark-grey);
+padding: 20px 40px;
 }
 
 .skillset__right {
@@ -254,5 +275,9 @@ flex-basis: 40%;
 
 .tools {
 background-color: var(--color-grey);
+}
 
+.tools,
+.etc {
+   padding: 20px;
 }
