--- a/style.css
+++ b/style.css
@@ -281,3 +281,63 @@ background-color: var(--color-grey);
 .etc {
    padding: 20px;
 }
+
+/* Work */
+.work__projects {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+
+.project {
+   position: relative;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 500px;
+   height: 400px;
+   margin: 20px;
+   background-color: var(--color-light-white);
+}
+
+.project__img {
+   max-width: 100%;
+   max-height: 100%;
+}
+
+.project__description {
+   position: absolute;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   top: 0;
+   left: 0;
+   background-color: var(--color-black);
+   width: 100%;
+   height: 100%;
+   opacity: 0;
+   transform: translateY(10px);
+   transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+   opacity: 0.8;
+   transform: translateY(0px);
+}
+
+.project__description h3 {
+   color: var(--color-white);
+}
+
+.project__description h3:after {
+   content: '';
+   width: 25px;
+   height: 2px;
+   background-color: var(--color-white);
+   display: block;
+   position: relative;
+   left: 50%;
+   margin-left: -12px;
+   margin-top: 8px;
+
+}
