--- a/style.css
+++ b/style.css
@@ -340,3 +340,28 @@ background-color: var(--color-grey);
    margin-left: -12px;
    margin-top: 8px;
 }
+
+/* Tesimonial */
+#testimonial {
+   background-color: var(--color-light-white);
+}
+
+.testimonials{
+   margin: 40px;
+}
+
+.testimonial {
+   display: flex;
+   justify-content: center;
+   margin: 32px;
+}
+
+.testimonial__speech-bubble {
+   padding: 18px;
+   background-color: var(--color-white);
+   border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p{
+   color: var(--color-light-grey);
+}
