--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1 {
 }
 
 h2 {
-   font-size: var(--font-regular);
+   font-size: var(--font-medium);
    font-weight: var(--weight-semi-bold);
    color: var(--color-black);
    margin: 8px 0;
@@ -364,4 +364,30 @@ background-color: var(--color-grey);
 
 .testimonial__speech-bubble p{
    color: var(--color-light-grey);
+}
+
+/* Contact */
+#contact {
+   background-color: var(--color-pink);
+}
+
+.contact__email,
+.contact__right,
+.contact__title {
+   color: var(--color-white);
+}
+
+.contact__title {
+   margin: 32px 0;
+}
+
+.contact__links {
+   font-size: var(--font-large);
+   margin: 24px 0;
+}
+
+.contact__links i:hover {
+   transform: scale(1.1);
+   color: var(--color-dark-grey);
+   transition: all var(--animation-duration) ease-in;
 }
