--- a/style.css
+++ b/style.css
@@ -127,6 +127,15 @@ p {
    background-color: var(--color-dark-pink);
 }
 
+.navbar__toggle-btn {
+   position: absolute;
+   top: 24px;
+   right: 32px;
+   display: none;
+   font-size: var(--font-medium);
+   color: var(--color-white);
+}
+
 /* Home */
 #home {
    background: url('images/newHomeBackground.png') center/cover no-repeat;
@@ -390,4 +399,22 @@ background-color: var(--color-grey);
    transform: scale(1.1);
    color: var(--color-dark-grey);
    transition: all var(--animation-duration) ease-in;
+}
+
+@media screen and (max-width: 768px){
+   .navbar__toggle-btn {
+      display: block;
+   }
+
+   #navbar {
+      flex-direction: column;
+      align-items: flex-start;
+   }
+
+   .navbar__menu {
+      flex-direction: column;
+      text-align: center;
+      width: 100%;
+      display: none;
+   }
 }
