--- a/style.css
+++ b/style.css
@@ -417,4 +417,20 @@ background-color: var(--color-grey);
       width: 100%;
       display: none;
    }
+
+   .about__majors {
+      flex-direction: column;
+   }
+
+   .major {
+      margin-bottom: 38px;
+   }
+
+   .skillset {
+      flex-direction: column;
+   }
+
+   .project {
+      flex-grow: 1;
+   }
 }
