--- a/style.css
+++ b/style.css
@@ -104,10 +104,13 @@ p {
    color: var(--color-light-white);
    padding: 16px;
    transition: all var(--animation-duration) ease-in-out;
+   z-index: 1;
 }
 
 #navbar.navbar__dark {
    background-color: var(--color-git-grey);
+   /* position:sticky;
+   top:0; */
    padding: 8px;
 }
 
@@ -316,11 +319,14 @@ background-color: var(--color-grey);
    height: 400px;
    margin: 20px;
    background-color: var(--color-light-white);
+   
 }
 
 .project__img {
    max-width: 100%;
    max-height: 100%;
+   align-self: center;
+   
 }
 
 .project__description {
