--- a/style.css
+++ b/style.css
@@ -416,6 +416,28 @@ background-color: var(--color-grey);
    transition: all var(--animation-duration) ease-in;
 }
 
+/* Scroll */
+.arrow__up {
+   position: fixed;
+   bottom: 50px;
+   right:50px;
+   width: 70px;
+   height: 70px;
+   font-size: 50px;
+   background-color: var(--color-orange);
+   color: var(--color-git-grey);
+   border-radius: 50%;
+   opacity: 0;
+   pointer-events: none;
+   transition: opacity 300ms ease-in;
+}
+
+.arrow__up.visible {
+   opacity: 1;
+   pointer-events: auto;
+}
+
+/* For below 768px screen width */
 @media screen and (max-width: 768px){
    .navbar__toggle-btn {
       display: block;
