--- a/style.css
+++ b/style.css
@@ -123,18 +123,17 @@ p {
    font-size: var(--font-medium);
    font-weight: var(--weight-semi-bold);
 }
+
 .navbar__menu__item {
    padding: 8px 12px;
    margin: 0 4px;
    cursor: pointer;
    border-radius: var(--size-border-radius);
-}
-
-.navbar__menu__item.active {
-   border: 1px solid var(--color-white);
+   border: 1px solid transparent;
 }
 
 .navbar__menu__item:hover {
+   border: 1px solid var(--color-white);
    background-color: var(--color-dark-pink);
 }
 
