--- a/style.css
+++ b/style.css
@@ -109,8 +109,6 @@ p {
 
 #navbar.navbar__dark {
    background-color: var(--color-git-grey);
-   /* position:sticky;
-   top:0; */
    padding: 2px;
 }
 
@@ -445,6 +443,7 @@ background-color: var(--color-grey);
    #navbar {
       flex-direction: column;
       align-items: flex-start;
+      background-color: var(--color-git-grey);
    }
 
    .navbar__menu {
@@ -452,6 +451,10 @@ background-color: var(--color-grey);
       text-align: center;
       width: 100%;
       display: none;
+   }
+
+   .navbar__menu.open {
+      display: block;
    }
 
    .about__majors {
