--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ p {
 
 .navbar__menu {
    display: flex;
-   
 }
 
 .navbar__logo {
@@ -137,11 +136,11 @@ p {
 
 .navbar__toggle-btn {
    position: absolute;
-   top: 24px;
+   top: 14px;
    right: 32px;
-   display: none;
    font-size: var(--font-medium);
    color: var(--color-white);
+   display: none;
 }
 
 /* Home */
@@ -444,6 +443,10 @@ background-color: var(--color-grey);
       flex-direction: column;
       align-items: flex-start;
       background-color: var(--color-git-grey);
+   }
+
+   #navbar.navbar--dark {
+      padding: 16px;
    }
 
    .navbar__menu {
